[package]
name = "kv-database"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.2"
crc = "1.7"
serde = "1.0.137"
serde_derive = "1.0.137"

[lib]
name = "libkb_database"
path = "src/lib.rs"

[[bin]]
name = "kv_mem"
path = "src/kv_mem.rs"